[metadata]
name            = KucherX
version         = file: kucherx/VERSION
author          = Zubax Robotics
url             = https://zubax.com
description     = A simple user-friendly GUI application designed for configuration, diagnostics, and maintenance of Cyphal-enabled Zubax hardware.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

keywords =
    cyphal
    data-bus
    can-bus
    ethernet
    vehicular
    onboard-networking
    avionics
    communication-protocol
    utility
    gui
    ide