[metadata]
name            = Yukon
version         = file: yukon/VERSION
author          = Zubax Robotics
url             = https://zubax.com
description     = A simple user-friendly GUI application designed for configuration, diagnostics, and maintenance of Cyphal-enabled Zubax hardware.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

keywords =
    cyphal
    data-bus
    can-bus
    ethernet
    vehicular
    onboard-networking
    avionics
    communication-protocol
    utility
    gui
    ide
[options]
zip_safe             = False
include_package_data = True
packages             = find:

# ---------------------------------------- PYTEST ----------------------------------------
[tool:pytest]
norecursedirs =
    tests/deps
testpaths        = yukon tests
python_files     = *.py
python_classes   = _UnitTest
python_functions = _unittest_
log_level        = DEBUG
log_cli_level    = INFO
log_cli          = true
log_file         = pytest.log
addopts          = --doctest-modules -v -p no:unraisableexception

# ---------------------------------------- MYPY ----------------------------------------
[mypy]
# Python version is not specified to allow checking against different versions.
warn_return_any        = True
warn_unused_configs    = True
disallow_untyped_defs  = True
check_untyped_defs     = True
no_implicit_optional   = True
warn_redundant_casts   = True
warn_unused_ignores    = True
show_error_context     = True
strict_equality        = True
implicit_reexport      = False
ignore_missing_imports = True
# We don't want MyPy to go checking generated code and its dependencies.
follow_imports         = silent

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-pydsdl.*]
ignore_missing_imports = True

[mypy-pycyphal.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-serial.*]
ignore_missing_imports = True

[mypy-sentry_sdk.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True
follow_imports = skip

# ---------------------------------------- COVERAGE ----------------------------------------
[coverage:run]
data_file = .coverage
branch    = True
parallel  = True
source =
    yukon
    tests

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    assert False
    if False:
    if __name__ == .__main__.:

# ---------------------------------------- PYLINT ----------------------------------------
[pylint.MASTER]
fail-under=9.9
jobs=0

[pylint.MESSAGES CONTROL]
# Valid levels: HIGH, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence=UNDEFINED
# Advanced semantic analysis is broken in PyLint so we just disable these checks since they add nothing but noise.
# These aspects are addressed by MyPy in a more sensible way.
disable=
    useless-import-alias,
    f-string-without-interpolation,
    import-outside-toplevel,
    fixme,
    too-few-public-methods,
    inconsistent-return-statements,
    too-many-arguments,
    import-error,
    misplaced-comparison-constant,
    unsubscriptable-object

[pylint.REPORTS]
output-format=colorized

[pylint.DESIGN]
max-branches=20
max-locals=30

[pylint.FORMAT]
max-line-length=120
max-module-lines=3000

[pylint.BASIC]
variable-rgx=[a-z_][a-z0-9_]*